@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2016 MarkLogic Corporation
+ * Copyright (c) 2004-2017 MarkLogic Corporation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,6 +38,7 @@ import com.marklogic.xcc.ResultItem;
 import com.marklogic.xcc.ResultSequence;
 import com.marklogic.xcc.Session;
 import com.marklogic.xcc.exceptions.RequestException;
+import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -45,29 +46,25 @@ import java.util.Queue;
 import static java.util.logging.Level.SEVERE;
 import static java.util.logging.Level.INFO;
 import static java.util.logging.Level.WARNING;
+
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
 
 public class QueryUrisLoader extends AbstractUrisLoader {
 
     private static final int DEFAULT_MAX_OPTS_FROM_MODULE = 10;
-    private static final Pattern MODULE_CUSTOM_INPUT = Pattern.compile("("
-            + PRE_BATCH_MODULE + "|" + PROCESS_MODULE + "|" + XQUERY_MODULE + "|" + POST_BATCH_MODULE
+    private static final Pattern MODULE_CUSTOM_INPUT = Pattern.compile('('
+            + PRE_BATCH_MODULE + '|' + PROCESS_MODULE + '|' + XQUERY_MODULE + '|' + POST_BATCH_MODULE
             + ")\\.[A-Za-z0-9_-]+=.*");
     private Queue<String> queue;
 
     protected Session session;
-    protected ResultSequence res;
+    protected ResultSequence resultSequence;
 
     private static final Logger LOG = Logger.getLogger(QueryUrisLoader.class.getName());
 
     @Override
     public void open() throws CorbException {
-        List<String> propertyNames = new ArrayList<String>();
-        if (properties != null) {
-            propertyNames.addAll(properties.stringPropertyNames());
-        }
-        propertyNames.addAll(System.getProperties().stringPropertyNames());
 
         parseUriReplacePatterns();
 
@@ -76,11 +73,11 @@ public class QueryUrisLoader extends AbstractUrisLoader {
             opts.setCacheResult(false);
             // this should be a noop, but xqsync does it
             opts.setResultBufferSize(0);
-            LOG.log(INFO, "buffer size = {0}, caching = {1}",
-                    new Object[]{opts.getResultBufferSize(), opts.getCacheResult()});
+            LOG.log(INFO, () -> MessageFormat.format("buffer size = {0}, caching = {1}",
+                    opts.getResultBufferSize(), opts.getCacheResult()));
 
-            session = cs.newSession();
-            Request req;
+            session = csp.get().newSession();
+            Request request;
             String urisModule = options.getUrisModule();
             if (isInlineOrAdhoc(urisModule)) {
                 String adhocQuery;
@@ -96,85 +93,33 @@ public class QueryUrisLoader extends AbstractUrisLoader {
                     if (isEmpty(adhocQuery)) {
                         throw new IllegalStateException("Unable to read adhoc query " + queryPath + " from classpath or filesystem");
                     }
-                    LOG.log(INFO, "invoking adhoc uris module {0}", queryPath);
+                    LOG.log(INFO, () -> MessageFormat.format("invoking adhoc uris module {0}", queryPath));
                 }
-                req = session.newAdhocQuery(adhocQuery);
+                request = session.newAdhocQuery(adhocQuery);
                 if (isJavaScriptModule(urisModule)) {
                     opts.setQueryLanguage("javascript");
                 }
             } else {
                 String root = options.getModuleRoot();
                 String modulePath = buildModulePath(root, urisModule);
-                LOG.log(INFO, "invoking uris module {0}", modulePath);
-                req = session.newModuleInvoke(modulePath);
+                LOG.log(INFO, () -> MessageFormat.format("invoking uris module {0}", modulePath));
+                request = session.newModuleInvoke(modulePath);
             }
             // NOTE: collection will be treated as a CWSV
-            req.setNewStringVariable("URIS", collection);
+            request.setNewStringVariable("URIS", collection);
             // TODO support DIRECTORY as type
-            req.setNewStringVariable("TYPE", TransformOptions.COLLECTION_TYPE);
-            req.setNewStringVariable("PATTERN", "[,\\s]+");
+            request.setNewStringVariable("TYPE", TransformOptions.COLLECTION_TYPE);
+            request.setNewStringVariable("PATTERN", "[,\\s]+");
 
-            // custom inputs
-            for (String propName : propertyNames) {
-                if (propName.startsWith(URIS_MODULE + ".")) {
-                    String varName = propName.substring((URIS_MODULE + ".").length());
-                    String value = getProperty(propName);
-                    if (value != null) {
-                        req.setNewStringVariable(varName, value);
-                    }
-                }
-            }
+            setCustomInputs(request);
 
-            req.setOptions(opts);
+            request.setOptions(opts);
 
-            res = session.submitRequest(req);
-            ResultItem next = res.next();
+            resultSequence = session.submitRequest(request);
 
-            int maxOpts = this.getMaxOptionsFromModule();
-            for (int i = 0; i < maxOpts && next != null && getBatchRef() == null && !(next.getItem().asString().matches("\\d+")); i++) {
-                String value = next.getItem().asString();
-                if (MODULE_CUSTOM_INPUT.matcher(value).matches()) {
-                    int idx = value.indexOf('=');
-                    properties.put(value.substring(0, idx).replace(XQUERY_MODULE + ".", PROCESS_MODULE + "."), value.substring(idx + 1));
-                } else {
-                    setBatchRef(value);
-                }
-                next = res.next();
-            }
+            preProcess(resultSequence);
 
-            try {
-                setTotalCount(Integer.parseInt(next.getItem().asString()));
-            } catch (NumberFormatException exc) {
-                throw new CorbException("Uris module " + options.getUrisModule() + " does not return total URI count");
-            }
-
-            queue = getQueue();
-
-            int i = 0;
-            String uri;
-            while (res != null && res.hasNext()) {
-                uri = res.next().asString();
-                if (isBlank(uri)) {
-                  continue;
-                }
-                
-                if (queue.isEmpty()) {
-                    LOG.log(INFO, "received first uri: {0}", uri);
-                }
-                //apply replacements (if any) - can be helpful in reducing in-memory footprint for ArrayQueue
-                for (int j = 0; j < replacements.length - 1; j += 2) {
-                    uri = uri.replaceAll(replacements[j], replacements[j + 1]);
-                }
-                
-                if (!queue.add(uri)) {
-                	LOG.log(SEVERE,"Unabled to add uri {0} to queue. Received uris {1} which is more than expected {2}",new Object[]{uri,(i+1),getTotalCount()});
-                } else if (i >= getTotalCount()) {
-                	LOG.log(WARNING,"Received uri {0} at index {1} which is more than expected {2}",new Object[]{uri,(i+1),getTotalCount()});
-                }
-                
-                logQueueStatus(i, uri, getTotalCount());
-                i++;
-            }
+            queue = createAndPopulateQueue(resultSequence);
 
         } catch (RequestException exc) {
             throw new CorbException("While invoking Uris Module", exc);
@@ -183,14 +128,136 @@ public class QueryUrisLoader extends AbstractUrisLoader {
         }
     }
 
-    protected Queue<String> getQueue() {
-        Queue<String> queue;
-        if (options != null && options.shouldUseDiskQueue()) {
-            queue = new DiskQueue<String>(options.getDiskQueueMaxInMemorySize(), options.getDiskQueueTempDir());
-        } else {
-            queue = new ArrayQueue<String>(getTotalCount());
+    protected void preProcess(ResultSequence resultSequence) throws CorbException {
+        ResultItem nextResultItem = collectCustomInputs(resultSequence);
+        try {
+            setTotalCount(Integer.parseInt(nextResultItem.getItem().asString()));
+        } catch (NumberFormatException exc) {
+            throw new CorbException("Uris module " + options.getUrisModule() + " does not return total URI count");
+        }
+    }
+
+    /**
+     * Collect any custom input options or batchRef value in the ResultSequence
+     * that precede the count of URIs.
+     *
+     * @param resultSequence
+     * @return the next ResultItem to retrieve from the ResultSequence
+     */
+    protected ResultItem collectCustomInputs(ResultSequence resultSequence) {
+        ResultItem nextResultItem = resultSequence.next();
+        int maxOpts = this.getMaxOptionsFromModule();
+        for (int i = 0; i < maxOpts
+                && nextResultItem != null
+                && getBatchRef() == null
+                && !(nextResultItem.getItem().asString().matches("\\d+")); i++) {
+            String value = nextResultItem.getItem().asString();
+            if (MODULE_CUSTOM_INPUT.matcher(value).matches()) {
+                int idx = value.indexOf('=');
+                properties.put(value.substring(0, idx).replace(XQUERY_MODULE + '.', PROCESS_MODULE + '.'), value.substring(idx + 1));
+            } else {
+                setBatchRef(value);
+            }
+            nextResultItem = resultSequence.next();
+        }
+        return nextResultItem;
+    }
+
+    /**
+     * Collect all {@value Options#URIS_MODULE} properties from the properties and
+     * System.properties (in that order, so System.properties will take
+     * precedence over properties) and set as NewStringVariable for each
+     * property the Request object.
+     *
+     * @param request
+     */
+    protected void setCustomInputs(Request request) {
+        List<String> propertyNames = new ArrayList<>();
+        // gather all of the p
+        if (properties != null) {
+            propertyNames.addAll(properties.stringPropertyNames());
+        }
+        propertyNames.addAll(System.getProperties().stringPropertyNames());
+        // custom inputs
+        for (String propName : propertyNames) {
+            if (propName.startsWith(URIS_MODULE + '.')) {
+                String varName = propName.substring((URIS_MODULE + '.').length());
+                String value = getProperty(propName);
+                if (value != null) {
+                    request.setNewStringVariable(varName, value);
+                }
+            }
+        }
+    }
+
+    /**
+     * Instantiate a new queue and populate with items from the ResultSequence.
+     *
+     * @param resultSequence
+     * @return
+     */
+    protected Queue<String> createAndPopulateQueue(ResultSequence resultSequence) {
+        Queue<String> uriQueue = createQueue();
+        return populateQueue(uriQueue, resultSequence);
+    }
+
+    protected Queue<String> populateQueue(Queue<String> queue, ResultSequence resultSequence) {
+        long lastMessageMillis = System.currentTimeMillis();
+        long totalCount = getTotalCount();
+        long uriIndex = 0;
+        String uri;
+        while (resultSequence != null && resultSequence.hasNext()) {
+            uri = resultSequence.next().asString();
+            if (isBlank(uri)) {
+                continue;
+            }
+
+            if (queue.isEmpty()) {
+                LOG.log(INFO, MessageFormat.format("received first uri: {0}", uri));
+            }
+            //apply replacements (if any) - can be helpful in reducing in-memory footprint for ArrayQueue
+            for (int j = 0; j < replacements.length - 1; j += 2) {
+                uri = uri.replaceAll(replacements[j], replacements[j + 1]);
+            }
+
+            if (!queue.offer(uri)) { //put the uri into the queue
+                LOG.log(SEVERE, MessageFormat.format("Unabled to add uri {0} to queue. Received uris {1} which is more than expected {2}", uri, uriIndex + 1, totalCount));
+            } else if (uriIndex >= totalCount) {
+                LOG.log(WARNING, MessageFormat.format("Received uri {0} at index {1} which is more than expected {2}", uri, uriIndex + 1, totalCount));
+            }
+
+            uriIndex++;  //increment before logging the status with received count
+
+            if (0 == uriIndex % 25000) {
+                logQueueStatus(uriIndex, uri, totalCount, lastMessageMillis);
+                lastMessageMillis = System.currentTimeMillis(); //save this for next iteration
+            }
+
+            if (uriIndex > totalCount) {
+                LOG.log(WARNING, MessageFormat.format("expected {0}, got {1}", totalCount, uriIndex));
+                LOG.warning("check your uri module!");
+            }
         }
         return queue;
+    }
+
+    /**
+     * Factory method that will produce a new Queue.
+     *
+     * @return
+     */
+    protected Queue<String> createQueue() {
+        Queue<String> uriQueue;
+        if (options != null && options.shouldUseDiskQueue()) {
+            uriQueue = new DiskQueue<>(options.getDiskQueueMaxInMemorySize(), options.getDiskQueueTempDir());
+        } else {
+            long total = getTotalCount();
+            if (total > Integer.MAX_VALUE) {
+                LOG.log(WARNING, () -> MessageFormat.format("Total number of URIs {0, number} is greater than Array capacity. Enable {1}", total, Options.DISK_QUEUE));
+            }
+            uriQueue = new ArrayQueue<>(Math.toIntExact(total));
+        }
+        return uriQueue;
     }
 
     @Override
@@ -208,6 +275,7 @@ public class QueryUrisLoader extends AbstractUrisLoader {
 
     @Override
     public void close() {
+        super.close();
         closeRequestAndSession();
         if (queue != null) {
             queue.clear();
@@ -220,9 +288,9 @@ public class QueryUrisLoader extends AbstractUrisLoader {
         if (session != null) {
             LOG.info("closing uris session");
             try {
-                if (res != null) {
-                    res.close();
-                    res = null;
+                if (resultSequence != null) {
+                    resultSequence.close();
+                    resultSequence = null;
                 }
             } finally {
                 session.close();
@@ -238,26 +306,25 @@ public class QueryUrisLoader extends AbstractUrisLoader {
             try {
                 max = Integer.parseInt(maxStr);
             } catch (NumberFormatException ex) {
-                LOG.log(WARNING, "Unable to parse MaxOptionsFromModule value: {0}, using default value: {1}",
-                        new Object[]{maxStr, DEFAULT_MAX_OPTS_FROM_MODULE});
+                LOG.log(WARNING, () -> MessageFormat.format("Unable to parse MaxOptionsFromModule value: {0}, using default value: {1}",
+                        maxStr, DEFAULT_MAX_OPTS_FROM_MODULE));
             }
         }
         return max;
     }
 
-    protected void logQueueStatus(int currentIndex, String uri, int total) {
-        if (0 == currentIndex % 50000) {
-            long freeMemory = Runtime.getRuntime().freeMemory();
-            if (freeMemory < (16 * 1024 * 1024)) {
-                LOG.log(WARNING, "free memory: {0} MiB", (freeMemory / (1024 * 1024)));
-            }
+    protected void logQueueStatus(long currentIndex, String uri, long totalCount, long lastMessageMillis) {
+        LOG.log(INFO, () -> MessageFormat.format("queued {0}/{1}: {2}", currentIndex, totalCount, uri));
+
+        boolean slowReceive = System.currentTimeMillis() - lastMessageMillis > (1000 * 4);
+        if (slowReceive) {
+            LOG.log(WARNING, () -> "Slow receive! Consider increasing max heap size and using -XX:+UseConcMarkSweepGC");
         }
-        if (0 == currentIndex % 25000) {
-            LOG.log(INFO, "queued {0}/{1}: {2}", new Object[]{currentIndex, total, uri});
-        }
-        if (currentIndex > total) {
-            LOG.log(WARNING, "expected {0}, got {1}", new Object[]{total, currentIndex});
-            LOG.warning("check your uri module!");
+
+        double megabytes = 1024d * 1024d;
+        long freeMemory = Runtime.getRuntime().freeMemory();
+        if (slowReceive || freeMemory < (16 * megabytes)) {
+            LOG.log(WARNING, () -> MessageFormat.format("free memory: {0} MiB", freeMemory / megabytes));
         }
     }
 }
